fixes some spacing on home page

--- a/index.css
+++ b/index.css
@@ -70,14 +70,14 @@ h1 {
     font-size: 84px;
     font-weight: 100;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    padding: 40px 0px 20px 0px;
+    padding: 10px 0px 10px 0px;
 }
 
 h2 {
     color: #230d0a;
     text-align: center;
     font-size: 26px;
-    padding: 10px 40px 20px 40px;
+    padding: 0px 40px 30px 40px;
 }
 
 /* Grid Containers */
